# BMAD_SIEG

./: .gitignore  CLAUDE.md  README.md  SETUP.md  middleware.ts  next.config.mjs  package.json  pnpm-lock.yaml  tsconfig.json
app/: globals.css  (+3 more)
backend/: .env.example  .gitignore  .ruff.toml  main.py  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 075e167c8434_initial_schema_with_core_tables.py  173e256bc347_add_realtime_cost_tracking.py  36dca3922506_add_speech_cost_tracking_fields.py  3d0578726cf6_create_resume_analyses_table.py  4839d6236216_add_video_interview_fields_epic_02.py  952cb9047261_add_is_active_column_to_resumes.py  b8d9c14166ed_add_job_posting_id_to_interviews.py  c4c387c07d02_add_job_postings_and_applications_tables.py  ef17ef26d8a1_add_profile_fields_and_embeddings_epic_.py
backend/app/api/: deps.py
backend/app/core/: config.py  database.py  exceptions.py  security.py
backend/app/middleware/: db_monitor.py
backend/app/models/: __init__.py  application.py  assessment.py  candidate.py  interview.py  interview_message.py  interview_session.py  job_posting.py  resume.py  resume_analysis.py  video_recording.py
backend/app/prompts/: adaptive_question.txt  data_engineering_interview.txt  design_interview.txt  devops_interview.txt  go_interview.txt  interview_system.txt  java_interview.txt  javascript_interview.txt  management_interview.txt  marketing_interview.txt  nodejs_interview.txt  operations_interview.txt  php_interview.txt  product_interview.txt  python_interview.txt  qa_automation_interview.txt  react_interview.txt  response_analysis.txt  resume_analysis.txt  resume_parsing.txt  rust_interview.txt  sales_interview.txt  support_interview.txt  typescript_interview.txt
backend/app/providers/: README.md  base_ai_provider.py  mock_ai_provider.py  openai_provider.py  openai_realtime_provider.py  openai_speech_provider.py  speech_provider.py
backend/app/repositories/: __init__.py  application_repository.py  base.py  candidate.py  interview.py  interview_message.py  interview_session.py  job_posting_repository.py  matching_repository.py  resume.py  resume_analysis.py  video_recording_repository.py
backend/docs/: DATABASE_CONNECTION_MANAGEMENT.md  VIDEO_STORAGE.md
backend/scripts/: cleanup_videos.py  generate_embeddings.py  seed_job_postings.py
backend/tests/: conftest.py
(+532 files in other folders)
